--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url=jdbc:mysql://db.ctd.academy:3306/1023c03_GRUPO5
+spring.datasource.username=1023c03_GRUPO5
+spring.datasource.password=lah3uBei
+spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+logging.level.root=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
