--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 logging.level.root=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.max-file-size=10MB
+
+spring.servlet.multipart.max-request-size=10MB
