--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=luxe.wheels2023@gmail.com
+spring.mail.password=yydxjqxqdnmbtzcs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
