--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.16.0-rc1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
