--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=lah3uBei
 spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.root=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
