--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,8 +14,10 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-search-autocomplete": "^8.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
