--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.17.0",
     "react-search-autocomplete": "^8.5.2"
   },
