--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,9 @@
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.17.0",
     "react-search-autocomplete": "^8.5.2",
-    "react-simple-star-rating": "^5.1.7"
+    "react-simple-star-rating": "^5.1.7",
+    "react-slideshow-image": "^4.3.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
